fixed thumbnail jumping and added link to logo

--- a/main.css
+++ b/main.css
@@ -414,4 +414,51 @@ footer img {
   footer div img {
     display: none;
   }
+
+/* *****popup****** */
+
+  .popup {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    background: rgba(0,0,0,0.6);
+    display: none;
+    transition: display 0.4s;
+  }
+
+  .popupContent {
+    width: 1000px;
+    height: 600px;
+    margin: 200px auto;
+    position: relative;
+    border: 3px solid #fff;
+    overflow: hidden;
+  }
+
+  .popupContent img {
+    width: 100%;
+    height: 100%;
+  }
+
+  .popupContent .close {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    background: #222;
+    border-radius: 50%;
+    border: 3px solid #fff;
+    color: #fff;
+    text-decoration: none;
+    line-height: 0;
+    padding: 9px 0 11px;
+    width: 20px;
+    text-align: center;
+    font-family: 'Abel';
+  }
+
+  .popup:target {
+    display: block;
+  }
 }
